--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,7 @@ FLASK_SECRET=b'#)\x9a\x9d\x94O]G\xe2\rO{WJ;o'
 # basic auth credentials for role-provider
 ACCESS_KEY=role-provider
 ACCESS_SECRET=Jz~4dr.25[9N[Cy_-[M
+
+# DLCS configuration
+DLCS_CUSTOMER=10
+DLCS_ROOT=dlcs.example
